<resources>
    <string name="app_name">nishTrack</string>
    <string name="day_month_placeholder">04 MAR</string>
    <string name="dow_placeholder">WED</string>
    <string name="currency_placeholder">\u20B9</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="back_arrow_description">Back</string>
    <string name="account">Account</string>
    <string name="chapter">Chapter</string>
    <string name="category">Category</string>
    <string name="accounts">Accounts</string>
    <string name="chapters">Chapters</string>
    <string name="categories">Categories</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="saveBtnText">SAVE</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>
    <string name="label">Label</string>
    <string name="placeholderText">Text</string>
    <string name="placeholderDate_dd_mmm_yyyy">27 Jul 2022</string>
    <string name="placeholderTime_hh_mm_a">10:43 AM</string>
    <string name="add_more">Add More</string>
    <string name="delete_item">Delete Item</string>
</resources>