<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_item_1"
            style="@style/SettingsRelativeLayout">

            <TextView
                android:id="@+id/text_item_1"
                style="@style/SettingsTextView"
                android:text="@string/accounts" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_item_2"
            style="@style/SettingsRelativeLayout">

            <TextView
                android:id="@+id/text_item_2"
                style="@style/SettingsTextView"
                android:text="@string/chapters" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_item_3"
            style="@style/SettingsRelativeLayout">

            <TextView
                android:id="@+id/text_item_3"
                style="@style/SettingsTextView"
                android:text="@string/categories" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>