<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/updateCategoryFirstLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout style="@style/UpdateField.InputRowLL">

            <TextView
                android:id="@+id/categoryLabelRowTV"
                style="@style/UpdateField.InputRowLabel"
                android:labelFor="@id/categoryLabelRowET"
                android:text="@string/label" />

            <EditText
                android:id="@+id/categoryLabelRowET"
                style="@style/UpdateField.InputRowET"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/UpdateField.InputRowLL.RecyclerView">

            <TextView
                android:id="@+id/categorySubCategoryRowTV"
                style="@style/UpdateField.InputRowLabel"
                android:text="@string/category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categorySubCategoryRowRV"
                style="@style/UpdateField.InputRowRV" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/updateCategorySaveBtn"
        style="@style/UpdateField.SaveBtn"
        android:text="@string/saveBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>